# raged

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUMMARIZATION_README.md  ast_rag_config.json  demo_summarizer.py  pyproject.toml  requirements.txt  summarizer_config_example.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ast_rag/: __init__.py  __main__.py  ast_parser.py  ast_rag_api.py  ast_rag_mcp.py  block_extractor.py  cli.py  embedding_server.py  embeddings.py  graph_schema.py  graph_updater.py  language_queries.py  metrics.py  models.py  output.py  parse_cache.py  summarizer.py  watcher.py
ast_rag/api/: __init__.py  ast_rag_api.py
ast_rag/dto/: __init__.py  block.py  config.py  enums.py  node.py  result.py
ast_rag/mcp/: __init__.py  server.py
ast_rag/repositories/: __init__.py  neo4j_helpers.py  neo4j_repository.py  qdrant_repository.py  schema_manager.py
ast_rag/sandbox/: __init__.py
ast_rag/schema/: graph_schema.cql
ast_rag/services/: __init__.py  api.py  config.py  embedding_manager.py  embedding_server.py  embedding_service.py  graph_service.py  graph_updater_service.py  parsing_service.py  search_service.py  (+2 more)
benchmarks/: README.md  create_ground_truth.py
docker/: run-neo4j.sh  run-qdrant.sh
docs/: QUICKSTART.md  STACK_TRACE_MAPPING.md  SUMMARIZATION.md  agent-scenarios.md  configuration.md  grafana_dashboard.json  graph-schema.md  python-api.md
scripts/: README.md
test_blocks/: BLOCK_EXTRACTION_GUIDE.md  example_python.py  example_rust.rs
tests/: README.md  TestCallResolution.java  benchmark_hybrid.py  generate_ground_truth.py  test_ast_cache.py  test_call_resolution.cpp  test_call_resolution.h  test_call_resolution.rs  test_phase2.py  test_rust_queries.rs  test_stack_trace.py  test_standard_result.py  test_summarizer.py  test_unsupported_language.py  test_update_project_dry_run.py
(+31 files in other folders)
